[gd_scene load_steps=9 format=3 uid="uid://d16wneryh8rqv"]

[ext_resource type="Script" path="res://ennemis/fleur_explosive.gd" id="1_qi2je"]
[ext_resource type="Texture2D" uid="uid://bmadbvl6hpkhk" path="res://images/antiprisme_fleur.png" id="2_rq8ru"]
[ext_resource type="AudioStream" uid="uid://brjfv21c14s2c" path="res://sons/bulle.mp3" id="3_3g6sl"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8wxbx"]
radius = 17.0
height = 58.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pg4ms"]
radius = 162.25

[sub_resource type="Animation" id="Animation_lyre8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AntiprismeFleur:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pqm4s"]
resource_name = "compte_a_rebours"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AntiprismeFleur:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5, 0.6, 0.7, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.7, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 1, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AntiprismeFleur:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.8, 2.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3, 3)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2, 2.1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"degats"
}, {
"args": [],
"method": &"mort"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wu173"]
_data = {
"RESET": SubResource("Animation_lyre8"),
"compte_a_rebours": SubResource("Animation_pqm4s")
}

[node name="FleurExplosive" type="RigidBody2D" groups=["ennemis"]]
collision_layer = 8
collision_mask = 48
script = ExtResource("1_qi2je")

[node name="AntiprismeFleur" type="Sprite2D" parent="."]
texture = ExtResource("2_rq8ru")
hframes = 3
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8wxbx")
metadata/_edit_lock_ = true

[node name="DetectionJoueur" type="Area2D" parent="."]
collision_layer = 2
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionJoueur"]
shape = SubResource("CircleShape2D_pg4ms")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wu173")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3g6sl")

[connection signal="body_entered" from="DetectionJoueur" to="." method="_on_detection_joueur_body_entered"]
